chore: migrate to github.devtool.tech

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,8 @@
 name: Build & Deploy
 on:
   push:
-    # branches:
-    #   - master
+    branches:
+      - master
     tags:
       - v*
   schedule:
@@ -20,11 +20,6 @@ jobs:
         registry-url: https://registry.npmjs.org/
 
     - run: npm ci
-
-    - name: Modify Version
-      shell: bash
-      run: |
-        node -e 'var pkg = require("./package.json"); pkg.version= (new Date().getFullYear().toString().substr(2)) + "." + (new Date().getMonth() + 1) + "." + (new Date().getDate()); require("fs").writeFileSync("./package.json", JSON.stringify(pkg, null, 2))'
 
     - run: npm run get:o
       env: 
@@ -46,6 +41,3 @@ jobs:
       with:
         deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
         publish_dir: ./web
-    - run: npm publish --access public
-      env:
-        NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
